Fixes, when typing in the search box prevents letters from being cut off

--- a/_inc/jetpack-admin-rtl.css
+++ b/_inc/jetpack-admin-rtl.css
@@ -753,6 +753,7 @@ html {
   border: 1px solid #c9ced0;
   border-left-width: 2px;
   background: #fff;
+  line-height: 1.3;
   border-radius: 3px;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
