--- a/_inc/scss/_main.scss
+++ b/_inc/scss/_main.scss
@@ -461,6 +461,7 @@ html {
 	border: 1px solid #c9ced0;
 	border-right-width: 2px;
 	background: #fff;
+	line-height:1.3;
 	@include border-radius(3px);
 
 	&:focus {
